Pre-versioning changes:

5/10:
- Upgraded django-pipeline package on all machines to fix Javascript issues in IE8
- Removed trailing commas in feed page Javascript causing compatibility problems in IE7
- Added automated "forgot password?" process for beta testers and business users
- Added password/email changing to account management
- Added an opt-in "remember me?" button on the signup and login pages for main site and management panel

5/9:
- Places ordering no longer shuffled on paging


5/3-5/7:
- Chatter posts now displaying avatar
- Enabled clickable URLs in chatter
- Fixed misleading end time display for multiday events
- Allowed business users to associate their accounts with an Organization post-signup (in case they created an account on the beta user signup)
- Various minor style tweaks
- Correctly spelled the surname of the CEO and developer/designer's primary source of income