@@ -1,5 +1,9 @@
 Pre-versioning changes:
 
+5/11:
+- Events and special searches no longer include expired items
+- Events filtering working
+
 5/10:
 - Upgraded django-pipeline package on all machines to fix Javascript issues in IE8
 - Removed trailing commas in feed page Javascript causing compatibility problems in IE7
@@ -9,7 +13,6 @@ Pre-versioning changes:
 
 5/9:
 - Places ordering no longer shuffled on paging
-
 
 5/3-5/7:
 - Chatter posts now displaying avatar
